# phison_hw

./: CMakeLists.txt  README.md  main.cpp  phison_hw_screencast.webm  print_msg.cpp
comm/: CMakeLists.txt  client.cpp  client.h  send_recv_fd.cpp  send_recv_fd.h  server.cpp  server.h
elevator/: CMakeLists.txt  elevator.cpp  elevator.h
terminal/: CMakeLists.txt  terminal.cpp  terminal.h
